--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/style.e308ff8e.css">
     <title>Adopt Me</title>
-  <script src="/style.e308ff8e.js"></script></head>
+  <script src="/adopt-me-react/style.e308ff8e.js"></script></head>
 
   <body>
     <div id="modal"></div>
@@ -18,6 +18,6 @@
         by <a href="https://scanthonie.github.io/">scanthonie</a>
       </p>
     </footer>
-    <script src="/App.d36a57b6.js"></script>
+    <script src="/adopt-me-react/App.d36a57b6.js"></script>
   </body>
 </html>
