--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/style.e308ff8e.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="/adopt-me-react/style.e308ff8e.css" />
     <title>Adopt Me</title>
-  <script src="/adopt-me-react/style.e308ff8e.js"></script></head>
+    <script src="/adopt-me-react/style.e308ff8e.js"></script>
+  </head>
 
   <body>
     <div id="modal"></div>
@@ -14,7 +15,9 @@
     <footer style="position: fixed;bottom: 5px; left: 15px;">
       <p>
         A course project for
-        <a href="https://frontendmasters.com/courses/complete-react-v5/">Complete Intro to React, v5</a>
+        <a href="https://frontendmasters.com/courses/complete-react-v5/"
+          >Complete Intro to React, v5</a
+        >
         by <a href="https://scanthonie.github.io/">scanthonie</a>
       </p>
     </footer>
